--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,10 @@
-h1 {
-  background-color: brown;
+.container {
+  margin: 10px;
+  padding: 10px;
+}
+
+.jumbotron {
+  font-family: fantasy;
 }
 
 .completed {
@@ -10,4 +15,9 @@ h1 {
 .notCompleted {
   color: red;
   cursor: pointer;
+}
+
+table {
+  margin: 10 10 10 10;
+  padding: 10 10 10 10;
 }
